add block generator

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-mousewheel": "^1.0.5",
     "bootstrap-grid": "git+https://github.com/Hilzu/bootstrap-grid.git",
     "font-awesome": "git+https://github.com/FortAwesome/Font-Awesome.git",
     "jquery": "^3.1.0"
